Update pattern library version, add fixes to spacing necessitated by pattern library update

--- a/repository-data/webfiles/src/main/scss/mygov/components/_az-nav.scss
+++ b/repository-data/webfiles/src/main/scss/mygov/components/_az-nav.scss
@@ -59,8 +59,10 @@
     &__title {
         text-transform: uppercase;
         font-size: 3rem;
+        line-height: px-to-em(32px, 48px);
         position: relative;
         top: 10px;
+
 
 
         clear: left;
@@ -74,6 +76,14 @@
         float: left;
         margin-left: 0;
         @include ds_colwidth(10);
+    }
+}
+
+@include media-query(medium) {
+    .az-list {
+        &__title {
+            line-height: px-to-em(40px, 57px);
+        }
     }
 }
 
