--- a/repository-data/webfiles/src/main/scss/mygov/components/_homepage-hero.scss
+++ b/repository-data/webfiles/src/main/scss/mygov/components/_homepage-hero.scss
@@ -72,6 +72,7 @@
 .#{$site-prefix}hero-az {
     background-color: $ds_colour__blue--dark;
     font-size: 1em;
+    line-height: px-to-em(24px, 14px);
     padding-top: 12px;
     padding-bottom: 12px;
 
