--- a/repository-data/webfiles/src/main/scss/mygov/components/_org-sectors.scss
+++ b/repository-data/webfiles/src/main/scss/mygov/components/_org-sectors.scss
@@ -149,6 +149,7 @@
         &__sublist-item {
             border-top: 1px solid $ds_colour__border--light;
             margin-bottom: 0;
+            line-height: px-to-em(32px, 16px);
             padding: 8px 0;
 
             float: left;
