--- a/repository-data/webfiles/src/main/scss/mygov/components/_popular-panel.scss
+++ b/repository-data/webfiles/src/main/scss/mygov/components/_popular-panel.scss
@@ -20,6 +20,7 @@
 
 .popular__title {
     font-size: 1rem;
+    line-height: px-to-rem(32px);
 }
 
 .popular__items {
