--- a/repository-data/webfiles/src/main/scss/mygov/components/_summary-table.scss
+++ b/repository-data/webfiles/src/main/scss/mygov/components/_summary-table.scss
@@ -60,6 +60,7 @@
     &__label {
         font-size: $small-size;
         font-weight: 700;
+        line-height: px-to-em(24px, 14px);
     }
 
     &:after {
